--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: ruby
 rvm:
-  - 2.2
-  - jruby
-  - rbx-2
+  - "2.1.5"
+  - "2.1.8"
+  - "2.2.4"
+  - "2.3.0"
+script: bundle exec rspec spec
+branches:
+  only:
+    - master
